--- a/index.html
+++ b/index.html
@@ -9,28 +9,25 @@
     <title>Welcome</title>
   </head>
   <body>
-    <h1>Welcome pagina berna</h1>
+
     <div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p>
+  <h1>My princesa</h1>
+  <p>Te amo mucho mi corazon!</p>
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Bernardo</h3>
+      <p>Una persona muy enamorada de corazona</p>
     </div>
     <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Carla</h3>
+      <p>Una señora muy enojona.</p>
     </div>
     <div class="col-sm-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Tomy</h3>
+      <p>Un ñino pedorrito</p>
     </div>
   </div>
 </div>
