--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-sm-4">
       <h3>Bernardo</h3>
-      <p>Una persona muy enamorada de corazona</p>
+      <p>Una persona muy enamorado de corazona (Carla Molina)</p>
     </div>
     <div class="col-sm-4">
       <h3>Carla</h3>
