--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
 
-    <div class="jumbotron text-center">
-  <h1>My princesa</h1>
-  <p>Te amo mucho mi corazon!</p>
+    <div class="jumbotron text-center" style="backgroud:#FC9D9A">
+  <h1 style="backgroud:white">My princesa</h1>
+  <p style="backgroud:white">Te amo mucho mi corazon!</p>
 </div>
 
 <div class="container">
