--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
     <div class="jumbotron text-center" style="background:#E94E77">
   <h1 style="color:white">My princesa</h1>
-  <p style="color:white">Te amo mucho mi corazon!</p>
+  <p style="color:white">Carla Molina</p>
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Bernardo</h3>
-      <p>Una persona muy enamorado de corazona (Carla Molina)</p>
+      <h3>¿Quien es mi princesa?</h3>
+      <p>Es la personita de la que me enamore, la cual me va a dar mi primer bebe.</p>
     </div>
     <div class="col-sm-4">
-      <h3>Carla</h3>
-      <p>Una señora muy enojona.</p>
+      <h3>¿Donde la conoci?</h3>
+      <p>En una graduación, donde me saco a bailar y no sabia</p>
     </div>
     <div class="col-sm-4">
-      <h3>Tomy</h3>
-      <p>Un ñino pedorrito</p>
+      <h3>¿Quiero casarme?</h3>
+      <p>Si, porque es de la unica persona la cual me he enamorado tan perdidamente y me hace tan feliz estar a su lado</p>
     </div>
   </div>
 </div>
