--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>GriApp</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/master.css">
+		<link rel="stylesheet" href="css/fontawesome-all.min.css">
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -30,9 +31,9 @@
 								</div>
 							</div>
 								<div class="row justify-content-center" style="margin-bottom:35px;">
-									<div class="col-12 col-sm-auto"> <img class="center" src="img/app-store.png" alt=""> </div>
-									<div class="col-12 col-sm-auto"> <img class="center" src="img/playstore.png" alt=""> </div>
-									<div class="col-12 col-sm-auto"> <img class="center" src="img/app-store.png" alt=""> </div>
+									<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-google-play"></i> Play Store</a> </div>
+									<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-apple" style="width: 20px;height: 20px;"></i> Mac Store</a> </div>
+									<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-app-store-ios" style="width: 20px;height: 20px;"></i> App Store</a> </div>
 								</div>
 					</div>
 			</section>
@@ -168,6 +169,7 @@
     	}
 		}
 		</script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
 		<script src="js/jquery-3.3.1.min.js"> </script>
 		<script src="js/tooltip.js"> </script>
 		<script src="js/bootstrap.min.js"> </script>
