--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>GriApp</title>
+		<title>GuiApp</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/master.css">
 		<link rel="stylesheet" href="css/fontawesome-all.min.css">
+		<link rel="stylesheet" href="css/mdb.min.css">
 	</head>
 	<body>
 		<div class="container-fluid">
       <header class="row">
-				<div class="col-12">
+				<div class="col-12 smooth-scroll list-unstyled">
 					<div class="topnav menu-fluid" id="myTopnav">
 	  				<a href="#inicio" class="active">Inicio</a>
 	  				<a href="#caracteristicas">Caracteristicas</a>
@@ -22,7 +23,7 @@
 					</div>
 				</div>
       </header>
-			<section class="row align-items-end" style="background-image:url('img/baby.jpg')">
+			<section class="row align-items-end bg" style="background-image: url(img/baby.jpg);">
 					<div class="col">
 							<div class="row justify-content-center" style="margin-bottom:40px;">
 								<div class="col-auto">
@@ -85,6 +86,11 @@
 
 					</div>
 			</section>
+			<section class="row bg" style="background-image: url(img/ic_bar.jpg);">
+				<div class="col">
+
+				</div>
+			</section>
 			<section href="caracteristicas" id="caracteristicas" class="row align-items-center" style="background: #FCB128;">
 				<div class="col-12 col-md-6">
 					<div class="row">
@@ -108,15 +114,16 @@
 			</section>
 			<section href="descargar" id="descargar" class="row align-items-center">
 				<div class="col-12 col-md-6">
-					<img class="center" src="img/logo.png" style="height: 250px; width: 250px;" alt="">
+					<div class="row justify-content-center">
+						<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-google-play"></i> Play Store</a> </div>
+						<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-apple" style="width: 20px;height: 20px;"></i> Mac Store</a> </div>
+						<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-app-store-ios" style="width: 20px;height: 20px;"></i> App Store</a> </div>
+					</div>
 				</div>
 				<div class="col-12 col-md-6">
 					<div class="row">
 						<div class="col-12">
 							<h1>Descarga</h1>
-						</div>
-						<div class="col-12">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 						</div>
 					</div>
@@ -169,6 +176,7 @@
     	}
 		}
 		</script>
+		<script src="js/mdb.min.js"> </script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
 		<script src="js/jquery-3.3.1.min.js"> </script>
 		<script src="js/tooltip.js"> </script>
