--- a/index.html
+++ b/index.html
@@ -5,163 +5,210 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>GuiApp</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/master.css">
 		<link rel="stylesheet" href="css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="css/mdb.min.css">
+		<!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+
+		<style>
+		.tooltip {
+    position: relative;
+    display: inline-block;
+		}
+
+		.tooltip .tooltiptext {
+    	visibility: hidden;
+    	width: 350px;
+    	background-color: white;
+    	color: black;
+    	text-align: center;
+    	border-radius: 10px;
+    	padding: 15px;
+    	position: absolute;
+    	z-index: 10;
+    	bottom: 110%;
+    	left: 18%;
+    	margin-left: -60px;
+    	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    	/* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+    	opacity: 0;
+    	transition: opacity 1s;
+		}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+		}
+</style>
 	</head>
 	<body>
-		<div class="container-fluid">
-      <header class="row">
-				<div class="col-12 smooth-scroll list-unstyled">
-					<div class="topnav menu-fluid" id="myTopnav">
-	  				<a href="#inicio" class="active">Inicio</a>
-	  				<a href="#caracteristicas">Caracteristicas</a>
-	  				<a href="#descargar">Descargar</a>
-	  				<a href="#contacto">Contacto</a>
-	  				<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-					</div>
-				</div>
-      </header>
-			<section class="row align-items-end bg" style="background-image: url(img/baby.jpg);">
-					<div class="col">
-							<div class="row justify-content-center" style="margin-bottom:40px;">
-								<div class="col-auto">
-									<h1 style="color:white; font-size:75px;">G U I A P P</h1>
-									<p style="width: 32%;margin: auto;color: white;">IniciApp es la plataforma digital que el programa de Educación Inicial FCS ha desarrollado para la comunidad de padres, educadores y personal de salud comprometidos con el desarrollo de los niños en México.</p>
-								</div>
-							</div>
-								<div class="row justify-content-center" style="margin-bottom:35px;">
-									<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-google-play"></i> Play Store</a> </div>
-									<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-apple" style="width: 20px;height: 20px;"></i> Mac Store</a> </div>
-									<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-app-store-ios" style="width: 20px;height: 20px;"></i> App Store</a> </div>
-								</div>
-					</div>
-			</section>
-			<section href="inicio" id="inicio" class="row align-items-center">
-					<div class="col">
-						<div class="row justify-content-center">
-							<div class="col-auto">
-								<h1 style="color: #23BBB8; text-align:center">GUIAPP</h1>
-								<p>IniciApp te ofrece una gama de conocimientos de vanguardia.</p>
-							</div>
-						</div>
-						<div class="row justify-content-center">
-							<div class="col-12">
-								<div class="row">
-									<div class="col-12 col-sm-4">
-										<div class="row">
-											<div class="col-12">
-												<img class="center" src="img/logo.png" style="height: 130px; width: 130px;" alt="">
-											</div>
-											<div class="col-12">
-												<p>IniciApp te ofrece una gama de conocimientos de vanguardia, actividades y buenas prácticas para que tu tarea como, padre de familia, educador o adulto responsable se convierta en una de las mejores experiencias de tu vida..</p>
-											</div>
-										</div>
-									</div>
-									<div class="col-12 col-sm-4">
-										<div class="row">
-											<div class="col-12">
-												<img class="center" src="img/logo.png" style="height: 130px; width: 130px;" alt="">
-											</div>
-											<div class="col-12">
-												<p>Si planeas ser padre, ya lo eres o tienes a tu cargo el cuidado y educación de un bebé y te interesa ser parte de una comunidad que busca mejorar la realidad de los niños, ofreciéndoles una relación afectiva de calidad y estimulación oportuna, IniciApp es para ti.</p>
-											</div>
-										</div>
-									</div>
-									<div class="col-12 col-sm-4">
-										<div class="row">
-											<div class="col-12">
-												<img class="center" src="img/logo.png" style="height: 130px; width: 130px;" alt="">
-											</div>
-											<div class="col-12">
-												<p>Te ofrece contenidos relacionados con la atención y afecto, estimulación oportuna, salud y derechos de los niños; un reloj con tips de acuerdo al momento del día, agenda del niño de acuerdo a intereses (salud, escuela, familia, etc.)</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
+		<section>
+<div class="slider">
+ <ul class="slides">
+	 <li>
+		 <img class="responsive-img" src="/res/img/image1.jpg"> <!-- random image -->
+		 <div class="caption center-align">
+			 <h3>G U I A P P </h3>
+			 <h6 class="light grey-text text-lighten-3">Es la plataforma digital gratuita que el programa de Educación Inicial FCS ha desarrollado para la comunidad de padres, educadores y personal de salud comprometidos con el desarrollo de las niñas y los niños durante su primera infancia. Guiapp te ofrece conocimientos de vanguardia, actividades y buenas prácticas para que tu tarea como, padre de familia, educador o adulto responsable se convierta en una de las mejores experiencias de tu vida.</h6>
+		 </div>
+	 </li>
+	 <li>
+		 <img class="responsive-img" src="/res/img/image2.jpg"> <!-- random image -->
+		 <div class="caption left-align">
+			 <h3>Titulo</h3>
+			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
+		 </div>
+	 </li>
+	 <li>
+		 <img class="responsive-img" src="/res/img/image3.jpg"> <!-- random image -->
+		 <div class="caption right-align">
+			 <h3>Titulo</h3>
+			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
+		 </div>
+	 </li>
 
-						</div>
+ </ul>
+</div>
+</section>
+	<section class="row" style="width:100%; margin: 0px; padding: 20px; background:white;">
+									<div class="col s12 col m4">
+											<div class="row">
+													<div class="col s12">
+															<div class="tooltip" style="display: block;margin: auto;">
+																	<img  src="../../res/img/1.png" width="130" height="130" alt="logo"  style="display: block;margin: auto;" class="center"/>
+																	<div class="tooltiptext">
+																			<div class="section">
+																					<h5>Descarga</h5>
+																					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+																			</div>
+																	</div>
+															</div>
+													</div>
+													<div class="col s12">
+															<p style="text-align:center">Actividades sencillas para realizar en diferentes momentos del día con el niño.</p>
+													</div>
+											</div>
+									</div>
+									<div class="col s12 col m4">
+											<div class="row">
+													<div class="col s12">
+															<div class="tooltip" style="display: block;margin: auto;">
+																	<img src="../../res/img/2.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<div class="tooltiptext">
+																			<div class="section">
+																					<h5>Descarga</h5>
+																					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+																			</div>
+																	</div>
+															</div>
+													</div>
+													<div class="col s12">
+															<p style="text-align:center">Una guía de observación para monitorear su desarrollo.</p>
+													</div>
+											</div>
+									</div>
+									<div class="col s12 col m4">
+											<div class="row">
+													<div class="col s12">
+															<div class="tooltip" style="display: block;margin: auto;">
+																	<img src="../../res/img/3.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<div class="tooltiptext">
+																			<div class="section">
+																					<h5>Descarga</h5>
+																					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+																			</div>
+																	</div>
+															</div>
+													</div>
+													<div class="col s12">
+															<p style="text-align:center" >Videos, infografías, audios, recomendaciones, artículos y todo lo que necesitas para una crianza amorosa.</p>
+													</div>
+											</div>
+									</div>
+									<div class="col s12 col m4">
+											<div class="row">
+													<div class="col s12">
+															<div class="tooltip" style="display: block;margin: auto;">
+															<img src="../../res/img/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+															<div class="tooltiptext">
+																			<div class="section">
+																					<h5>Descarga</h5>
+																					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+																			</div>
+															</div>
+															</div>
+													</div>
+													<div class="col s12">
+															<p style="text-align:center">Una agenda para llevar el registros de vacunas, eventos y avances en su desarrollo.</p>
+													</div>
+											</div>
+									</div>
+									<div class="col s12 col m4">
+											<div class="row">
+													<div class="col s12">
+															<div class="tooltip" style="display: block;margin: auto;">
+																	<img src="../../res/img/5.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<div class="tooltiptext">
+																			<div class="section">
+																					<h5>Descarga</h5>
+																					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+																			</div>
+																	</div>
+															</div>
+													</div>
+													<div class="col s12">
+															<p style="text-align:center">Una selección musical que te acompañe en los diferentes momentos del día.</p>
+													</div>
+											</div>
+									</div>
+									<div class="col s12 col m4">
+											<div class="row">
+													<div class="col s12">
+															<div class="tooltip" style="display: block;margin: auto;">
+																	<img src="../../res/img/6.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<div class="tooltiptext">
+																			<div class="section">
+																					<h5>Descarga</h5>
+																					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+																			</div>
+																	</div>
+															</div>
+													</div>
+													<div class="col s12">
+															<p style="text-align:center" >La ubicación de parques, museos, hospitales y eventos de entretenimiento.</p>
+													</div>
+											</div>
+									</div>
 
+</section>
+
+<section href="descargar" id="descargar" class="row">
+	<div class="col s12 col m6">
+<div class="row">
+					<div class="col s12 col m5">
+							<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+								 <i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
 					</div>
-			</section>
-			<section class="row bg" style="background-image: url(img/ic_bar.jpg);">
-			</section>
-			<section href="caracteristicas" id="caracteristicas" class="row align-items-center" style="background: #FCB128;">
-				<div class="col-12 col-md-6">
-					<div class="row">
-						<div class="col-12">
-							<h1 style="color:white;">Funciones del producto:</h1>
-						</div>
-						<div class="col-12">
-								<ul style="color:white; margin-top:20px;">
-									<li>Registro del avance en el desarrollo del niño. (Salud, escuela y familia)</li>
-									<li>Acciones concretas relacionadas al momento del día.</li>
-									<li>Directorio interactivo de lugares y eventos.</li>
-									<li>Calendario de eventos.</li>
-									<li>Integración con redes sociales para compartir información destacada.</li>
-								</ul>
-						</div>
+					<div class="col s12 col m5">
+							<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+									<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
 					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<img class="center" src="img/logo.png" style="height: 250px; width: 250px;" alt="">
-				</div>
-			</section>
-			<section href="descargar" id="descargar" class="row align-items-center">
-				<div class="col-12 col-md-6">
-					<div class="row justify-content-center">
-						<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-google-play"></i> Play Store</a> </div>
-						<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-apple" style="width: 20px;height: 20px;"></i> Mac Store</a> </div>
-						<div class="col-12 col-sm-auto"> <a class="button" href="#"> <i class="fab fa-app-store-ios" style="width: 20px;height: 20px;"></i> App Store</a> </div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="row">
-						<div class="col-12">
-							<h1>Descarga</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-			<footer href="contacto" id="contacto" class="row align-items-center" style="background: #23BBB8;">
-				<div class="col-12 col-sm-6">
-					<div class="row">
-						<div class="col-12">
-							<p style="color:white; text-align: left;">www.guiapp.com.mx</p>
-						</div>
-						<div class="col-12">
-							<p style="color:white; text-align: left;">Correo: guiapp@educacioninicial.com</p>
-						</div>
-						<div class="col-12">
-							<p style="color:white; text-align: left;">Telefono: (52)554582538</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-sm-6">
-					<div class="row justify-content-end">
-						<div class="col-12">
-							<div class="row justify-content-end">
-								<div class="col-2">
-									<img src="img/ic_face.png" style="display:block; margin:auto; width:32px; height:32px;" alt="">
-								</div>
-								<div class="col-2">
-									<img src="img/ic_face.png" style="display:block; margin:auto; width:32px; height:32px;" alt="">
-								</div>
-								<div class="col-2" style="magin-rigth:5px;">
-									<img src="img/ic_face.png" style="display:block; margin:auto; width:32px; height:32px;" alt="">
-								</div>
+			</div>
+	</div>
+	<div class="col s12 col m6">
+<div class="row">
+					<div class="col s12">
+							<div class="section">
+									<h1>Descarga</h1>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							</div>
-						</div>
-						<div class="col-12">
-							<p style="color:white; text-align: right;">Educación Inicial. Fundación Carlos Slim. Aviso de privacidad</p>
-						</div>
 					</div>
-				</div>
-			</footer>
-		</div>
+</div>
+	</div>
+</section>
+
 
 		<script>
 			function myFunction() {
@@ -173,10 +220,8 @@
     	}
 		}
 		</script>
-		<script src="js/mdb.min.js"> </script>
-		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
-		<script src="js/jquery-3.3.1.min.js"> </script>
-		<script src="js/tooltip.js"> </script>
-		<script src="js/bootstrap.min.js"> </script>
+		<script src="js/jquery-3.3.1.min.js" > </script>
+		<!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 	</body>
 </html>
