--- a/index.html
+++ b/index.html
@@ -202,26 +202,43 @@
 					<div class="col s12">
 							<div class="section">
 									<h1>Descarga</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							</div>
 					</div>
 </div>
 	</div>
 </section>
 
+<footer class="page-footer orange">
+              <div class="container">
+                  <div class="row">
+                      <div class="col l6 s12">
+                        <h5 class="white-text">Contenido</h5>
+                        <p class="grey-text text-lighten-4">2017 Fundaci&oacute;n Carlos Slim. Todos los derechos reservados.</p>
+                      </div>
+                      <div class="col l4 offset-l2 s12">
+                        <h5 class="white-text">Fundaci&oacute;n</h5>
+                        <ul>
+                            <li><a class="grey-text text-lighten-3" href="https://www.fundacioncarlosslim.org">T&eacute;rminos y Condiciones</a></li>
+                            <li><a class="grey-text text-lighten-3" href="https://www.fundacioncarlosslim.org">Aviso de privacidad</a></li>
+                        </ul>
+                      </div>
+                  </div>
+              </div>
+            <div class="footer-copyright">
+            <div class="container">
+            © 2018 Copyright
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+</footer>
 
-		<script>
-			function myFunction() {
-    		var x = document.getElementById("myTopnav");
-    			if (x.className === "topnav") {
-        	x.className += " responsive";
-    			} else {
-        	x.className = "topnav";
-    	}
-		}
-		</script>
 		<script src="js/jquery-3.3.1.min.js" > </script>
 		<!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+		<script>
+		$(document).ready(function(){
+	 	$('.slider').slider({full_width:true});
+		});
+		</script>
 	</body>
 </html>
