Ajuste de imagenes
imagenes

--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 <div class="slider">
  <ul class="slides">
 	 <li>
-		 <img class="responsive-img" src="/res/img/image1.jpg"> <!-- random image -->
+		 <img class="responsive-img" src="img/image1.jpg"> <!-- random image -->
 		 <div class="caption center-align">
 			 <h3>G U I A P P </h3>
 			 <h6 class="light grey-text text-lighten-3">Es la plataforma digital gratuita que el programa de Educación Inicial FCS ha desarrollado para la comunidad de padres, educadores y personal de salud comprometidos con el desarrollo de las niñas y los niños durante su primera infancia. Guiapp te ofrece conocimientos de vanguardia, actividades y buenas prácticas para que tu tarea como, padre de familia, educador o adulto responsable se convierta en una de las mejores experiencias de tu vida.</h6>
 		 </div>
 	 </li>
 	 <li>
-		 <img class="responsive-img" src="/res/img/image2.jpg"> <!-- random image -->
+		 <img class="responsive-img" src="img/image2.jpg"> <!-- random image -->
 		 <div class="caption left-align">
 			 <h3>Titulo</h3>
 			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
 		 </div>
 	 </li>
 	 <li>
-		 <img class="responsive-img" src="/res/img/image3.jpg"> <!-- random image -->
+		 <img class="responsive-img" src="img/image3.jpg"> <!-- random image -->
 		 <div class="caption right-align">
 			 <h3>Titulo</h3>
 			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
@@ -77,7 +77,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-																	<img  src="../../res/img/1.png" width="130" height="130" alt="logo"  style="display: block;margin: auto;" class="center"/>
+																	<img  src="img/1.png" width="130" height="130" alt="logo"  style="display: block;margin: auto;" class="center"/>
 																	<div class="tooltiptext">
 																			<div class="section">
 																					<h5>Descarga</h5>
@@ -95,7 +95,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-																	<img src="../../res/img/2.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<img src="img/2.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
 																					<h5>Descarga</h5>
@@ -113,7 +113,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-																	<img src="../../res/img/3.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<img src="img/3.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
 																					<h5>Descarga</h5>
@@ -131,7 +131,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-															<img src="../../res/img/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+															<img src="img/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 															<div class="tooltiptext">
 																			<div class="section">
 																					<h5>Descarga</h5>
@@ -149,7 +149,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-																	<img src="../../res/img/5.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<img src="img/5.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
 																					<h5>Descarga</h5>
@@ -167,7 +167,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-																	<img src="../../res/img/6.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+																	<img src="img/6.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
 																					<h5>Descarga</h5>
