ajustes en secciones

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       </ul>
     </div>
   </nav>
-		<section>
+		<div class="section">
 <div class="slider">
- <ul class="slides">
+ 	<ul class="slides">
 	 <li>
 		 <img class="responsive-img" src="img/image1.jpg"> <!-- random image -->
 		 <div class="caption center-align">
@@ -75,10 +75,9 @@
 			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
 		 </div>
 	 </li>
-
- </ul>
+ 	</ul>
+	</div>
 </div>
-</section>
 	<section class="row" style="width:100%; margin: 0px; padding: 20px; background:white;">
 									<div class="col s12 col m4">
 											<div class="row">
