--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </style>
 	</head>
 	<body>
-		<nav>
+		<nav class="white">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -51,7 +51,6 @@
       </ul>
     </div>
   </nav>
-		<div class="section">
 <div class="slider">
  	<ul class="slides">
 	 <li>
@@ -76,7 +75,6 @@
 		 </div>
 	 </li>
  	</ul>
-	</div>
 </div>
 	<section class="row" style="width:100%; margin: 0px; padding: 20px; background:white;">
 									<div class="col s12 col m4">
