--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
     visibility: visible;
     opacity: 1;
 		}
+		nav ul a {
+    color: #fb9803 !important;
+	}
 </style>
 	</head>
 	<body>
-		<nav class="white">
+		<nav class="white" style="border-bottom: solid 2px #fb9803;">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
