--- a/index.html
+++ b/index.html
@@ -191,29 +191,29 @@
 
 </section>
 
-<section href="descargar" id="descargar" class="row">
-	<div class="col s12 col m6">
-<div class="row">
-					<div class="col s12 col m5">
-							<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
-								 <i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
-					</div>
-					<div class="col s12 col m5">
-							<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
-									<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
-					</div>
+<div href="descargar" id="descargar" class="valign-wrapper">
+	<div>
+		<div class="row">
+			<div class="col s12 col m5">
+				<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+				<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
 			</div>
+			<div class="col s12 col m5">
+				<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+				<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
+			</div>
+		</div>
 	</div>
-	<div class="col s12 col m6">
-<div class="row">
-					<div class="col s12">
-							<div class="section">
-									<h1>Descarga</h1>
-							</div>
-					</div>
+	<div>
+		<div class="row">
+			<div class="col s12">
+				<div class="section">
+					<h1>Descarga</h1>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-	</div>
-</section>
 
 <footer class="page-footer orange">
               <div class="container">
