--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Funciones</a></li>
+        <li><a href="#">Descarga</a></li>
       </ul>
     </div>
   </nav>
