--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 </section>
 
 <div href="descargar" id="descargar" class="valign-wrapper">
-			<div row>
+			<div class="row">
 				<div class="col s12 col m5">
 					<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
 					<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
