Ajustes en footer

--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
               <div class="container">
                   <div class="row">
                       <div class="col l6 s12">
+												<h5 class="white-text">Fundaci&oacute;n</h5>
+												<a class="grey-text text-lighten-3" href="https://www.fundacioncarlosslim.org">Aviso de privacidad</a>
                         <h5 class="white-text">Contenido</h5>
                         <p class="grey-text text-lighten-4">2017 Fundaci&oacute;n Carlos Slim. Todos los derechos reservados.</p>
                       </div>
                       <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Fundaci&oacute;n</h5>
                         <ul>
-                            <li><a class="grey-text text-lighten-3" href="https://www.fundacioncarlosslim.org">T&eacute;rminos y Condiciones</a></li>
                             <li><a class="grey-text text-lighten-3" href="https://www.fundacioncarlosslim.org">Aviso de privacidad</a></li>
                         </ul>
                       </div>
