--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="footer-copyright">
             <div class="container">
             © 2018 Copyright
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <a class="grey-text text-lighten-4 right" href="http://educacioninicial.mx/">educacioninicial.mx</a>
             </div>
           </div>
 </footer>
