--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                       </div>
                       <div class="col l4 offset-l2 s12">
                         <ul>
-                            <li><a class="grey-text text-lighten-3" href="https://www.fundacioncarlosslim.org">Aviso de privacidad</a></li>
+                            <li> <img src="img/facebook.png"/> <img src="img/twitter.png" /> <img src="img/youtube.png" /></li>
                         </ul>
                       </div>
                   </div>
