Ajustes de iconos

--- a/index.html
+++ b/index.html
@@ -223,10 +223,7 @@
                       </div>
                       <div class="col l4 offset-l2 s12">
                         <ul>
-														<li> </li>
-														<li> </li>
-														<li> </li>
-                            <li> <img src="img/facebook.png"/> <img src="img/twitter.png" /> <img src="img/youtube.png" /></li>
+                            <li> <img style="width:30px;" src="img/facebook.png"/> <img style="width:30px;" src="img/twitter.png" /> <img style="width:30px;" src="img/youtube.png" /></li>
                         </ul>
                       </div>
                   </div>
