--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 <footer class="page-footer orange">
               <div class="container">
-                  <div class="row">
+                  <div class="row valign-wrapper">
                       <div class="col l6 s12">
 												<h5 class="white-text">Fundaci&oacute;n</h5>
 												<a class="grey-text text-lighten-3" href="https://www.fundacioncarlosslim.org">Aviso de privacidad</a>
