--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 																	<div class="tooltiptext">
 																			<div class="section">
 																					<h5>Descarga</h5>
-																					<img src="img/tooltip.1.jpg" width="130" height="130" alt="">
+																					<img src="img/tooltip-1.jpg" width="130" height="130" alt="">
 																			</div>
 																	</div>
 															</div>
