--- a/index.html
+++ b/index.html
@@ -186,22 +186,22 @@
 </section>
 
 <div href="descargar" id="descargar" class="valign-wrapper">
-			<div class="row">
-				<div class="col s12 col m5">
-					<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
-					<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
-				</div>
-				<div class="col s12 col m5">
+			<div style="margin:0px;padding:0px;">
+				<div class="row">
+					<div class="col s12 col m3">
+						<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+							<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
+					</div>
+					<div class="col s12 col m3">
 						<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
 						<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col s12 col m5">
+					</div>
+					<div class="col s12 col m6">
 					<div class="section">
 						<h1>Descarga</h1>
 					</div>
 				</div>
+			</div>
 			</div>
 </div>
 
