--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><img style="width: 235px;" src="img/logo-eduinicial.gif"/></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li class="active"><a href="#"><img src="img/logo" class="left">search</img>Inicio</a></li>
+        <li class="active"><a href="#"><img src="img/logo.png" class="left" />Inicio</a></li>
         <li><a href="#">Funciones</a></li>
         <li><a href="#">Descarga</a></li>
       </ul>
