--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><img style="width: 235px;" src="img/logo-eduinicial.gif"/></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li class="active"><a href="#"><img src="img/logo.png" style="width:25px;" class="left"></img>Inicio</a></li>
+        <li><a href="#">Inicio</a></li>
         <li><a href="#">Funciones</a></li>
         <li><a href="#">Descarga</a></li>
       </ul>
@@ -185,8 +185,7 @@
 
 </section>
 
-<div href="descargar" id="descargar" class="valign-wrapper">
-			<div style="margin:0px;padding:0px;">
+<div href="descargar" id="descargar" style="justify-content:center;align-items:center">
 				<div class="row">
 					<div class="col s12 col m3">
 						<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
@@ -201,7 +200,6 @@
 						<h1>Descarga</h1>
 					</div>
 				</div>
-			</div>
 			</div>
 </div>
 
