--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 </section>
 
-<div href="descargar" id="descargar" style="justify-content:center;align-items:center">
+<div href="descargar" id="descargar" style="display: flex;justify-content: center;align-items: center;">
 				<div class="row">
 					<div class="col s12 m6">
 						<div class="row">
