--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		.tooltip .tooltiptext {
     	visibility: hidden;
-    	width: 350px;
+    	width: 200px;
     	background-color: white;
     	color: black;
     	text-align: center;
@@ -26,7 +26,7 @@
     	position: absolute;
     	z-index: 10;
     	bottom: 110%;
-    	left: 18%;
+    	left: 35%;
     	margin-left: -60px;
     	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     	/* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
@@ -87,7 +87,7 @@
 																	<img  src="img/1.png" width="130" height="130" alt="logo"  style="display: block;margin: auto;" class="center"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																					<img src="img/tooltip-1.jpg" style="width: 100%;height: 400px;" alt="">
+																					<img src="img/tooltip-1.jpg" style="height: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -104,7 +104,7 @@
 																	<img src="img/2.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-2.jpg" style="width: 100%;height: 400px;" alt="">
+																				<img src="img/tooltip-2.jpg" style="height: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -121,7 +121,7 @@
 																	<img src="img/3.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-3.jpg" style="width: 100%;height: 400px;" alt="">
+																				<img src="img/tooltip-3.jpg" style="height: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -138,7 +138,7 @@
 															<img src="img/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 															<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-4.jpg" style="width: 100%;height: 400px;" alt="">
+																				<img src="img/tooltip-4.jpg" style="height: 300px;" alt="">
 																			</div>
 															</div>
 															</div>
@@ -155,7 +155,7 @@
 																	<img src="img/5.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-5.jpg" style="width: 100%;height: 400px;" alt="">
+																				<img src="img/tooltip-5.jpg" style="height: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -172,7 +172,7 @@
 																	<img src="img/6.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-6.jpg" style="width: 100%;height: 400px;" alt="">
+																				<img src="img/tooltip-6.jpg" style="height: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
