Ajustes en descargas

--- a/index.html
+++ b/index.html
@@ -185,18 +185,18 @@
 
 </section>
 
-<div href="descargar" id="descargar">
+<div href="descargar" id="descargar" style="background:#634195;">
 				<div class="row" style="margin-bottom:0 !important;">
 					<div class="col s12 m3">
-								<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
 					</div>
 					<div class="col s12 col m3">
-							<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+							<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 							<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
 					</div>
 					<div class="col s12 col m6">
-							<p style="color:white">Descarga</p>
+							<p style="color: white;text-align: center;font-size: 35px;">Descarga</p>
 					</div>
 			</div>
 </div>
