--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><img style="width: 178px;margin-top: 6px;margin-left: 30px;" src="img/logo-eduinicial.gif"/></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Funciones</a></li>
-        <li><a href="#">Descarga</a></li>
+        <li><a href="inicio">Inicio</a></li>
+        <li><a href="funciones">Funciones</a></li>
+        <li><a href="descargar">Descarga</a></li>
       </ul>
     </div>
   </nav>
-<div class="slider">
+<div id="inicio" class="slider">
  	<ul class="slides">
 	 <li>
 		 <img class="responsive-img" src="img/image1.jpg"> <!-- random image -->
@@ -79,7 +79,7 @@
 	 </li>
  	</ul>
 </div>
-	<section class="row" style="width:100%; margin: 0px; padding: 20px; background:white;">
+	<section id="funciones" class="row" style="width:100%; margin: 0px; padding: 20px; background:white;">
 									<div class="col s12 col m4">
 											<div class="row">
 													<div class="col s12">
