--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><img style="width: 178px;margin-top: 6px;margin-left: 30px;" src="img/logo-eduinicial.gif"/></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="inicio">Inicio</a></li>
-        <li><a href="funciones">Funciones</a></li>
-        <li><a href="descargar">Descarga</a></li>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#funciones">Funciones</a></li>
+        <li><a href="#descargar">Descarga</a></li>
       </ul>
     </div>
   </nav>
