--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 		nav ul a {
     color: #fb9803 !important;
 	}
+
+	@media only screen and (max-width: 600px) {
+    .descargas {
+        padding-top: 0px;
+    }
+}
 </style>
 	</head>
 	<body>
@@ -187,16 +193,16 @@
 
 <div href="descargar" id="descargar" style="background:#634195;">
 	<div class="container">
-				<div class="row" style="margin-bottom:0 !important; height:400px;">
-					<div class="col s12 m3 valign">
+				<div class="row" style="margin-bottom:0 !important; height:250px;">
+					<div class="col s12 m3">
 								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
 					</div>
-					<div class="col s12 col m3 valign">
+					<div class="col s12 col m3">
 							<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 							<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
 					</div>
-					<div class="col s12 col m6 valign">
+					<div class="col s12 col m6">
 							<p style="color: white;text-align: center;font-size: 35px;">Descarga</p>
 					</div>
 			</div>
@@ -226,6 +232,8 @@
             </div>
           </div>
 </footer>
+
+
 
 		<script src="js/jquery-3.3.1.min.js" > </script>
 		<!-- Compiled and minified JavaScript -->
