Banner, links de redes
se ajustaron las redes sociales y las imagenes del banner

--- a/index.html
+++ b/index.html
@@ -196,12 +196,10 @@
 	<div class="container">
 				<div id="descargar" class="row valign-wrapper" style="margin-bottom:0 !important; height:250px;">
 					<div class="col s12 m3">
-								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 10px;text-align: center;">
-								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
+								<img src="img/app-store.svg" alt="">
 					</div>
 					<div class="col s12 col m3">
-							<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 10px;text-align: center;">
-							<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
+							<img src="img/app_store.svg" alt="">
 					</div>
 					<div class="col s12 col m6">
 							<p style="color: white;text-align: center;font-size: 35px;">Descarga</p>
@@ -221,7 +219,13 @@
                       </div>
                       <div class="col l4 offset-l2 s12">
                         <ul>
-                            <li> <img style="width:30px;" src="img/facebook.png"/> <img style="width:30px;" src="img/twitter.png" /> <img style="width:30px;" src="img/youtube.png" /></li>
+                            <li>
+															<a href="https://www.facebook.com/educacioninicial.fcs/"/>
+															<img style="width:30px;" src="img/facebook.png"/>
+															<a href="https://twitter.com/EduInicialFCS" />
+															<img style="width:30px;" src="img/twitter.png" />
+															<a href="https://www.youtube.com/user/educacioninicialfcs" />
+															<img style="width:30px;" src="img/youtube.png" /></li>
                         </ul>
                       </div>
                   </div>
