HTML: icono playstore

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
 	<div class="container">
 				<div id="descargar" class="row valign-wrapper" style="margin-bottom:0 !important; height:250px;">
 					<div class="col s12 m3">
-								<img src="img/app-store.svg" alt="">
+								<img src="img/apple.svg" alt="">
 					</div>
 					<div class="col s12 col m3">
-							<img src="img/app_store.svg" alt="">
+							<img src="img/play.svg" alt="">
 					</div>
 					<div class="col s12 col m6">
 							<p style="color: white;text-align: center;font-size: 35px;">Descarga</p>
