HTML: cambio botones de descarga, ancho en tooltip

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		.tooltip .tooltiptext {
     	visibility: hidden;
-    	width: 200px;
+    	width: 350px;
     	background-color: white;
     	color: black;
     	text-align: center;
@@ -94,7 +94,7 @@
 																	<img  src="img/1.png" width="130" height="130" alt="logo"  style="display: block;margin: auto;" class="center"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																					<img src="img/tooltip-1.jpg" style="height: 300px;" alt="">
+																					<img src="img/tooltip-1.jpg" style="height: 450px;width: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -111,7 +111,7 @@
 																	<img src="img/2.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-2.jpg" style="height: 300px;" alt="">
+																				<img src="img/tooltip-2.jpg" style="height: 450px;width: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -128,7 +128,7 @@
 																	<img src="img/3.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-3.jpg" style="height: 300px;" alt="">
+																				<img src="img/tooltip-3.jpg" style="height: 450px;width: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -145,7 +145,7 @@
 															<img src="img/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 															<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-4.jpg" style="height: 300px;" alt="">
+																				<img src="img/tooltip-4.jpg" style="height: 450px;width: 300px;" alt="">
 																			</div>
 															</div>
 															</div>
@@ -162,7 +162,7 @@
 																	<img src="img/5.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-5.jpg" style="height: 300px;" alt="">
+																				<img src="img/tooltip-5.jpg" style="height: 450px;width: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -179,7 +179,7 @@
 																	<img src="img/6.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 																	<div class="tooltiptext">
 																			<div class="section">
-																				<img src="img/tooltip-6.jpg" style="height: 300px;" alt="">
+																				<img src="img/tooltip-6.jpg" style="height: 450px;width: 300px;" alt="">
 																			</div>
 																	</div>
 															</div>
@@ -196,10 +196,10 @@
 	<div class="container">
 				<div id="descargar" class="row valign-wrapper" style="margin-bottom:0 !important; height:250px;">
 					<div class="col s12 m3 col m6">
-						<img src="img/apple.svg" alt="" width="200px" height="180px" style="display:block;margin:auto">
+						<img src="img/apple.png" alt="" width="300" height="80" style="display:block;margin:auto">
 					</div>
 					<div class="col s12 col m3 col m6">
-							<img src="img/play.svg" alt="" width="200px" height="200px" style="display:block;margin:auto">
+							<img src="img/play.png" alt="" width="300" height="80" style="display:block;margin:auto">
 					</div>
 					<div class="col s12 col m6">
 							<p style="color: white;text-align: center;font-size: 35px;"style="display:block;margin:auto">Descarga</p>
