ajuste de transparencia en banner

--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@
 		 <div class="caption center-align">
 			 <h3>G U I A P P </h3>
 			 <h6 class="light grey-text text-lighten-3">Es la plataforma digital gratuita que el programa de Educación Inicial FCS ha desarrollado para la comunidad de padres, educadores y personal de salud comprometidos con el desarrollo de las niñas y los niños durante su primera infancia. Guiapp te ofrece conocimientos de vanguardia, actividades y buenas prácticas para que tu tarea como, padre de familia, educador o adulto responsable se convierta en una de las mejores experiencias de tu vida.</h6>
-		 </div>
+			 <div style="width: 100%;height: 250px;background: rgb(255, 255, 255);opacity: 0.3 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
+		</div>
 	 </li>
 	 <li>
 		 <img class="responsive-img" src="img/image2.jpg"> <!-- random image -->
 		 <div class="caption left-align">
 			 <h3>Titulo</h3>
 			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
+			 <div style="width: 100%;height: 250px;background: rgb(255, 255, 255);opacity: 0.3 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		 </div>
 	 </li>
 	 <li>
@@ -82,6 +84,7 @@
 		 <div class="caption right-align">
 			 <h3>Titulo</h3>
 			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
+			 <div style="width: 100%;height: 250px;background: rgb(255, 255, 255);opacity: 0.3 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		 </div>
 	 </li>
  	</ul>
