HTML: icono logo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <li><a href="#funciones">Funciones</a></li>
         <li><a href="#descargar">Descarga</a></li>
       </ul>
+			<a href="#" class=""><img  class="right" src="img/logo.png" style="width: 50px;margin-right: 10px;" /></a>
     </div>
   </nav>
 <div id="inicio" class="slider">
@@ -145,7 +146,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-															<img src="img/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+															<img src="resimg/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 															<div class="tooltiptext">
 																			<div class="section">
 																				<img src="img/tooltip-4.jpg" style="height: 450px;" alt="">
