HTML: cambio letras y fondo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     }
 }
 
+.textBold{
+	 font-weight: 500
+
+}
+
 </style>
 	</head>
 	<body>
@@ -59,7 +64,7 @@
         <li><a href="#funciones">Funciones</a></li>
         <li><a href="#descargar">Descarga</a></li>
       </ul>
-			<a href="#" class=""><img  class="right" src="res/simg/logo.png" style="width: 50px;margin-right: 10px;" /></a>
+			<a href="#" class=""><img  class="right" src="img/logo.png" style="width: 50px;margin-right: 10px;" /></a>
     </div>
   </nav>
 <div id="inicio" class="slider">
@@ -68,24 +73,24 @@
 		 <img class="responsive-img" src="img/image1.jpg"> <!-- random image -->
 		 <div class="caption center-align">
 			 <h3>G U I A P P </h3>
-			 <h6 class="light grey-text text-lighten-3">Es la plataforma digital gratuita que el programa de Educación Inicial FCS ha desarrollado para la comunidad de padres, educadores y personal de salud comprometidos con el desarrollo de las niñas y los niños durante su primera infancia. Guiapp te ofrece conocimientos de vanguardia, actividades y buenas prácticas para que tu tarea como, padre de familia, educador o adulto responsable se convierta en una de las mejores experiencias de tu vida.</h6>
-			 <div style="width: 100%;height: 250px;background: rgb(0,0,0);opacity: 0.2 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
+			 <h6 class="light grey-text text-lighten-3 textBold" font: style="line-height:30px;padding:5px 30px" align="justify">Es la plataforma digital gratuita que el programa de Educación Inicial FCS ha desarrollado para la comunidad de padres, educadores y personal de salud comprometidos con el desarrollo de las niñas y los niños durante su primera infancia. Guiapp te ofrece conocimientos de vanguardia, actividades y buenas prácticas para que tu tarea como, padre de familia, educador o adulto responsable se convierta en una de las mejores experiencias de tu vida.</h6>
+			 <div style="width: 100%;height: 270px;background: rgb(0,0,0);opacity: 0.4 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		</div>
 	 </li>
 	 <li>
 		 <img class="responsive-img" src="img/image2.jpg"> <!-- random image -->
 		 <div class="caption left-align">
 			 <h3>Titulo</h3>
-			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
-			 <div style="width: 100%;height: 250px;background: rgb(0,0,0);opacity: 0.2 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
+			 <h6 class="light grey-text text-lighten-3 textBold" font: style="line-height:30px;padding:5px 30px" align="justify">Descripción.</h6>
+			 <div style="width: 100%;height: 270px;background: rgb(0,0,0);opacity: 0.4 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		 </div>
 	 </li>
 	 <li>
 		 <img class="responsive-img" src="img/image3.jpg"> <!-- random image -->
 		 <div class="caption right-align">
 			 <h3>Titulo</h3>
-			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
-			 <div style="width: 100%;height: 250px;background: rgb(0,0,0);opacity: 0.2 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
+			 <h6 class="light grey-text text-lighten-3 textBold" font: style="line-height:30px;padding:5px 30px" align="justify">Descripción.</h6>
+			 <div style="width: 100%;height: 270px;background: rgb(0,0,0);opacity: 0.4 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		 </div>
 	 </li>
  	</ul>
@@ -146,7 +151,7 @@
 											<div class="row">
 													<div class="col s12">
 															<div class="tooltip" style="display: block;margin: auto;">
-															<img src="resimg/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
+															<img src="img/4.png" width="130" height="130" alt="logo" style="display: block;margin: auto;"/>
 															<div class="tooltiptext">
 																			<div class="section">
 																				<img src="img/tooltip-4.jpg" style="height: 450px;" alt="">
